--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 </head>
 
 <HTML>
-<body>
-    <canvas id="myCanvas" width="800" height="800"></canvas>
+<body background="image/Background.jpg">
+    <h1 id="h1" align="center">Gomoku</h1>
+    <h2 class="h2" align="center">Black First</h2>
+    <div class = "WB">
+        <img  src="image/WB.png" alt="W&B Chess" width="500" height="450">
+    </div>
+    <canvas id="myCanvas"
+        width="750"
+        height="750"
+        onclick="play(event)"
+    ></canvas>
+    <input id="btn1" type=button value='Restart the Game' onclick="location.reload()">
+    <script type="text/javascript"></script>
     <script src="constant.js"></script>
     <script src="board.js"></script>
 </body>
