--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <HTML>
 <body background="image/Background.jpg">
-    <h1 id="h1" align="center">Gomoku</h1>
+    <h1 id="h1" align="center">Five In a Row</h1>
     <h2 class="h2" align="center">Black First</h2>
     <canvas id="myCanvas"
         width="750"
